[package]
name = "el"
version = "0.1.0"
authors = ["madprops <easywest@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.100", features = ["derive"]}
serde_json = "1.0.40"
json = "0.12.0"
termion = "1.5.3"
strsim = "0.9.2"
textwrap = "0.11.0"
inflections = "1.1.1"